<resources>
    <string name="app_name">Freight Finder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_feed">Feed</string>
    <string name="fragment_new_picko">New Picko</string>
    <string name="fragment_settings">Settings</string>
    <string name="question">Type a Question...</string>
    <string name="Freight_Type_Bulk">Bulk</string>
    <string name="Label_Freight_Details">See Details</string>
    <string name="Label_Freight_Type">Freight Type</string>
    <string name="Label_Vehicle_Type">Vehicle Type</string>
    <string name="Label_Freight_Weight">Weight</string>
    <string name="Label_Freight_Volume">Volume</string>
    <string name="Label_Freight_Loading_Date">Loading Date</string>
    <string name="Label_Freight_Date_Created">Date Created</string>
    <string name="Label_Freight_Description">Description</string>
    <string name="Label_Freight_Apply">Apply</string>
    <string name="Label_Freight_IsVatIncluded">VAT Included</string>
    <string name="Label_Freight_Price">Price</string>
    <string name="Label_Freight_FullVehicleQuantity">Full Vehicle Quantity</string>
    <string name="Label_Freight_DeliverByDate">Deliver By Date</string>
    <string name="Label_Weight">Weight:</string>
    <string name="Label_Freight">Freight:</string>
    <string name="Label_Vehicle">Vehicle:</string>
    <string name="OfferToFreightMessage10">You have no vehicle attached to your account</string>
    <string name="OfferToFreightMessage11">You have already applied for this freight</string>
    <string name="OfferToFreightMessage12">You have successfully applied for this freight</string>
    <string name="Currency">₺</string>
    <!--<string name="BaseUrl">https://freightfinder.azurewebsites.net/</string>-->
    <string name="BaseUrl">http://192.168.0.150:8080/</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="SearchResults">Freight Search Results</string>
    <string name="Search">Search</string>
    <string name="SearchInstructionText">Please select a maximum distance for your freight search </string>


    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="service_name">Location service</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="freight_offer_status_pending">Pending</string>
    <string name="freight_offer_status_accepted">Accepted</string>
    <string name="freight_offer_status_rejected">Rejected</string>

    <string name="label_offer_details">Offer Details</string>
    <string name="label_freight_offer_date">Offer Date</string>
    <string name="label_freight_offer_status">Status</string>
    <string name="label_freight_offer_date_accepted">Date Accepted</string>

    <string name="label_address_line">Address Line</string>
    <string name="label_district">District</string>
    <string name="label_county">County</string>
    <string name="label_city">City</string>
    <string name="label_country">Country</string>
    <string name="label_telephone">Telephone</string>


    <string name="label_vehicle_details">Vehicle Details</string>
    <string name="title_activity_vehicle_settings">VehicleSettings</string>
    <string name="title_activity_vehicle_details">VehicleDetails</string>
    <string name="title_activity_personal_details">PersonalDetails</string>

    <string name="label_personal_details">Personal Details</string>
    <string name="label_fullname">Full Name</string>
    <string name="label_email">Email</string>
    <string name="label_phoneNumber">Phone Number</string>
    <string name="label_dateofbirth">Date of Birth</string>
    <string name="label_address">Address</string>
    <string name="label_address_details">Address Details</string>

    <string name="label_vehicle_plate_number">Plate Number</string>
    <string name="label_vehicle_type">Vehicle Type</string>
    <string name="label_vehicle_capacity">Vehicle Capacity</string>
    <string name="label_vehicle_identification_number">Identification Number</string>
    <string name="label_vehicle_engine_number">Engine Number</string>
    <string name="label_vehicle_brand">Brand</string>
    <string name="label_vehicle_company">Owner Company</string>
    <string name="label_vehicle_model">Model</string>
    <string name="label_vehicle_isloaded">Loaded</string>
    <string name="label_vehicle_color">Color</string>


    <string name="label_name">Name</string>
    <string name="label_surname">Surname</string>



</resources>
