<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow>

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="Freight Details"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>
    </TableRow>

    <TableRow android:background="@color/colorVeryLightGrey">

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/Label_Freight_Type" />

        <TextView
            android:id="@+id/FreightType"
            android:padding="3dip" />
    </TableRow>

    <TableRow android:background="@color/colorVeryLightGrey">

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/Label_Freight_Weight" />

        <TextView
            android:id="@+id/FreightWeight"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/Label_Freight_Volume" />

        <TextView
            android:id="@+id/FreightVolume"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>

    <TableRow android:background="@color/colorVeryLightGrey">

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/Label_Freight_Loading_Date" />

        <TextView
            android:id="@+id/LoadingDate"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/Label_Freight_DeliverByDate" />

        <TextView
            android:id="@+id/DeliverByDate"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>

    <TableRow android:background="@color/colorVeryLightGrey">

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/Label_Freight_Date_Created" />

        <TextView
            android:id="@+id/DateCreated"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/Label_Freight_IsVatIncluded" />

        <TextView
            android:id="@+id/Vat"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>

    <TableRow android:background="@color/colorVeryLightGrey">

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/Label_Freight_FullVehicleQuantity" />

        <TextView
            android:id="@+id/IsFullVehicle"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>

    <TableRow android:layout_height="wrap_content">

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/Label_Freight_Description" />

        <TextView
            android:id="@+id/Description"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:maxWidth="30dp"
            android:padding="3dip" />
    </TableRow>
</merge>