<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userTextEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userTextEditSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_surname" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userTextEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_email" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userTextEditPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_telephone" />


        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="start"-->
        <!--android:text="@string/label_dateofbirth" />-->

        <!--<DatePicker-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:datePickerMode="spinner">-->

        <!--</DatePicker>-->
        <include layout="@layout/partial_layout_insert_update_address_details"></include>


    </LinearLayout>

</merge>